added audio file to preload it

--- a/VirtualPiano/index.html
+++ b/VirtualPiano/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div style="display: none;">
+        <audio src="./tunes/;.wav" preload="auto"></audio>
+        <audio src="./tunes/a.wav" preload="auto"></audio>
+        <audio src="./tunes/d.wav" preload="auto"></audio>
+        <audio src="./tunes/e.wav" preload="auto"></audio>
+        <audio src="./tunes/f.wav" preload="auto"></audio>
+        <audio src="./tunes/g.wav" preload="auto"></audio>
+        <audio src="./tunes/h.wav" preload="auto"></audio>
+        <audio src="./tunes/j.wav" preload="auto"></audio>
+        <audio src="./tunes/k.wav" preload="auto"></audio>
+        <audio src="./tunes/l.wav" preload="auto"></audio>
+        <audio src="./tunes/o.wav" preload="auto"></audio>
+        <audio src="./tunes/p.wav" preload="auto"></audio>
+        <audio src="./tunes/s.wav" preload="auto"></audio>
+        <audio src="./tunes/t.wav" preload="auto"></audio>
+        <audio src="./tunes/u.wav" preload="auto"></audio>
+        <audio src="./tunes/w.wav" preload="auto"></audio>
+        <audio src="./tunes/y.wav" preload="auto"></audio>
+    </div>
     
     
     <div class="paino">
